# qtwebchannel-feedstock

./: README.md  abs.yaml
recipe/: meta.yaml  run_qt_test.sh
recipe/test/: CMakeLists.txt  test_qtwebchannel.cpp
